debut de la page

--- a/web/demo.html
+++ b/web/demo.html
@@ -3,28 +3,68 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Game web">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Loïc Richard , Maxime Audain , Renaud Machecourt-Bourgeois">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lightup Game</title>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 
 <body>
+    <div class="header">
+        <h1>Lightup Game</h1>
+    </div>
+    <hr>
+    <div id="puzzle" style="display: inline;">
+        <div class="gamemenu" style="display: inline;">
+            <p align="center">
+                <button class="restart" onclick="">Game...</button>
+                <button class="restart" onclick="restart(g)">Restart</button>
+                <button class="gamemenu" onclick="undo(g)">Undo</button>
+                <button class="gamemenu" onclick="redo(g)">Redo</button>
+                <button class="gamemenu" onclick="solve(g)">Solve</button>
+            </p>
+        </div>
+        <div align="center">
+            <canvas id='mycanvas' width="400px" height="400px">
+                <button onload="start()">JEU</button>
+            </canvas>
+            <!-- <div id="resizable" style="position: relative; left: 0px; top: 0px; width: 295px;">
 
-    <!-- ********************* html ********************* -->
-
-    <h1>Demo Game Web</h1>
-
-    <p>This demo shows you the basics to call our game routines using a
-    JavaScript module based on Wasm technology... Here, the default game is
-    created at startup and then it is printed as text within a <em>pre</em>
-    element.</p>
-
-    <pre id="result"></pre>
+                <div id="statusbarholder" style="display: block">
+                </div>
+                <canvas style="position: absolute; z-index: 98; bottom: 0px; right: 0px; cursor: se-resize" 
+                    title="Drag to resize the puzzle. Right-click to restore the default size." width="10" height="10"></canvas> 
+            </div> -->
+        </div>
+    </div>
 
     <hr>
-    <p><em>aurelien.esnard@u-bordeaux.fr, 2022.</em></p>
+    <div>
+        <p>
+            Place light bulbs in the grid so as to light up all the blank squares. A light illuminates its own square and all the squares in
+            the same row or column unless blocked by walls (black squares). Lights may not illuminate each other. Each numbered square must be
+            orthogonally adjacent to exactly the given number of lights.
+        </p>
+        <p>
+            Click on a square to place or remove a light. Right-click to place a dot indicating that you think there is no light in that square.
+        </p>
 
-    <!-- ********************* script ********************* -->
-
+    </div>
+    <hr>
+    (comments to <a href="loic.richard@etu.u-bordeaux.fr">richard@etu.u-bordeaux.fr</a>)
+    <br>
+    (Last modified on 
+    <!--LASTMOD-->
+    Thur Apr 28 
+    <!--END-->)
+    <br>
+    <em>Loïc Maxime Renaud , 2022.</em>
+    
     <script src="game.js"></script>
     <script src="demo.js"> </script>
+    <script src="mystyle.css"></script>
 
 </body>
 
